# integration-service-hardrive

./: .pre-commit-config.yaml  README.md  SRS.txt  pyproject.toml
deploy/: docker-compose.override.yml
src/app/: asgi.py  bootstrap.py  main.py
src/app/api/rest/: exception_handlers.py
src/app/api/rest/v1/: __init__.py  _dependencies.py  _schemas.py  agents.py  analytics.py  auth.py  documents.py  forwarding.py  routes.py  users.py
src/app/api/tasks/: __init__.py
src/app/configs/: external_settings.py  internal_settings.py  settings.py
src/app/container/: container.py  wrappers.py
src/app/exceptions/: __init__.py  exceptions.py
src/app/infrastructure/: __init__.py
src/app/infrastructure/database/migrations/versions/: 2f30b9dfae15_init.py
src/app/infrastructure/router_service/: __init__.py
src/app/infrastructure/router_service/http/: __init__.py  clients.py  schemas.py
src/app/models/: __init__.py  enums.py  models.py
src/app/repositories/: __init__.py  delivery_events.py  documents.py  recipients.py  sync_state.py  users.py
src/app/service_layer/: __init__.py  auth.py  data_store.py  uow.py  users.py
src/app/utils/: auth.py  schemas.py
